--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,16 @@
 .first_line{
-	padding-top: 60px;
+  padding-top: 50px;
 }
-
+h2{
+  color: #000;
+  font-family: ;
+  font-size: 16px;
+}
+hr.style-two {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
 .logo{
 	margin-left: 15px;
 }
@@ -13,8 +22,14 @@
 .foto_carousel{
 	margin-left: auto;
 	margin-right: auto;
-	width: 480px !important; 
+	width: 720px !important; 
 	height: 350px !important;
+}
+.foto_carousel2{
+  margin-left: auto;
+  margin-right: auto;
+
+  height: 420px !important;
 }
 .back-to-top {
 margin: 0; 
@@ -170,3 +185,5 @@ ul.social-share li a:hover {
   background: #c52d2f;
   color: #fff;
 }
+
+
